--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.100"
+clap = { version = "4.5.53", features = ["derive"] }
 itertools = "0.14.0"
 jiff = { version = "0.2.16", features = ["serde"] }
 ordered-float = "5.1.0"
