--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,16 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-anyhow = "1.0.100"
-clap = { version = "4.5.53", features = ["derive"] }
-itertools = "0.14.0"
-jiff = { version = "0.2.16", features = ["serde"] }
-ordered-float = "5.1.0"
-rand = "0.9.2"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.145"
-smallvec = { version = "1.15.1", features = ["serde"] }
+anyhow = "1"
+clap = { version = "4", features = ["derive"] }
+flate2 = "1.1.5"
+jiff = { version = "0.2", features = ["serde"] }
+ordered-float = { version = "5", features = ["serde"] }
+rand = "0.9"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+smallvec = { version = "1", features = ["serde"] }
 
 [dev-dependencies]
 # Used in UTs since we need to explicitly seed an RNG so test results are reproducible
-rand_chacha = "0.9.0"
+rand_chacha = "0.9"
