--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,15 @@
-[package]
-name = "smart_touhou_sorter"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+resolver = "3"
+members = ["engine", "testbed"]
 
-[dependencies]
+[workspace.dependencies]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
-flate2 = "1.1.5"
+flate2 = "1"
 jiff = { version = "0.2", features = ["serde"] }
 ordered-float = { version = "5", features = ["serde"] }
 rand = "0.9"
+rand_chacha = "0.9" # Used in UTs for a seeded RNG
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 smallvec = { version = "1", features = ["serde"] }
-
-[dev-dependencies]
-# Used in UTs since we need to explicitly seed an RNG so test results are reproducible
-rand_chacha = "0.9"
