--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+getrandom = { workspace = true, optional = true }
 jiff = { workspace = true }
 ordered-float = { workspace = true }
 rand = { workspace = true }
@@ -12,3 +13,6 @@ smallvec = { workspace = true }
 
 [dev-dependencies]
 rand_chacha = { workspace = true }
+
+[features]
+wasm = ["dep:getrandom", "getrandom/wasm_js"]
