--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,38 @@
 [workspace]
+members = [
+    "engine",
+    "testbed",
+    "web-engine",
+]
 resolver = "3"
-members = ["engine", "testbed"]
+
+[profile.release]
+opt-level = "s"
 
 [workspace.dependencies]
 anyhow = "1"
-clap = { version = "4", features = ["derive"] }
 flate2 = "1"
-jiff = { version = "0.2", features = ["serde"] }
-ordered-float = { version = "5", features = ["serde"] }
+getrandom = { version = "0.3.4", features = ["wasm_js"] }
 rand = "0.9"
-rand_chacha = "0.9" # Used in UTs for a seeded RNG
-serde = { version = "1", features = ["derive"] }
+rand_chacha = "0.9"
 serde_json = "1"
-smallvec = { version = "1", features = ["serde"] }
+
+[workspace.dependencies.clap]
+version = "4"
+features = ["derive"]
+
+[workspace.dependencies.jiff]
+version = "0.2"
+features = ["serde"]
+
+[workspace.dependencies.ordered-float]
+version = "5"
+features = ["serde"]
+
+[workspace.dependencies.serde]
+version = "1"
+features = ["derive"]
+
+[workspace.dependencies.smallvec]
+version = "1"
+features = ["serde"]
